--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "g": "^2.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
