--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
