--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "scroll-into-view": "^1.9.1"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
